Dream Cars/force-app/main/default/objects/Product2/fields/Buyer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Customer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cars</relationshipLabel>
    <relationshipName>Cars</relationshipName>
    <type>Lookup</type>
</CustomField>