Dream Cars/force-app/main/default/objects/Product2/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Condition</valueSetName>
    </valueSet>
</CustomField>