Dream Cars/force-app/main/default/objects/Product2/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <label>Delivery Date:</label>
    <type>Date</type>
</CustomField>