Dream Cars/force-app/main/default/objects/Product2/fields/Discount_Made_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Made_Percent__c</fullName>
    <formula>IF( Sale_Price__c  &gt; 0, ( Discount_Made__c  /  Sale_Price__c ), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Made %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>