Dream Cars/force-app/main/default/objects/Product2/fields/Drive_Type__c.field-meta.xml
<CustomField>
    <fullName>Drive_Type__c</fullName>
    <label>Drive Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Drive_Type</valueSetName>
    </valueSet>
</CustomField>