Dream Cars/force-app/main/default/objects/Product2/fields/Engine_Power__c.field-meta.xml
<CustomField>
    <fullName>Engine_Power__c</fullName>
    <label>Engine Power</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>