Dream Cars/force-app/main/default/objects/Product2/fields/Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Type__c</fullName>
    <label>Fuel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fuel_Type</valueSetName>
    </valueSet>
</CustomField>