Dream Cars/force-app/main/default/objects/Product2/fields/Safety_Rating__c.field-meta.xml
<CustomField>
    <fullName>Safety_Rating__c</fullName>
    <label>Safety Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Stars_Rating</valueSetName>
    </valueSet>
</CustomField>