Dream Cars/force-app/main/default/objects/Product2/fields/Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Sale_Price__c</fullName>
    <label>Sale Price</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>