Dream Cars/force-app/main/default/objects/Product2/fields/Sold_By__c.field-meta.xml
<CustomField>
    <fullName>Sold_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold By</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>Sales Manager</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Cars</relationshipName>
    <type>Lookup</type>
</CustomField>