Dream Cars/force-app/main/default/objects/Product2/fields/Torque_Nm__c.field-meta.xml
<CustomField>
    <fullName>Torque_Nm__c</fullName>
    <label>Torque (Nm)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>