Dream Cars/force-app/main/default/objects/Product2/fields/Transmission_Type__c.field-meta.xml
<CustomField>
    <fullName>Transmission_Type__c</fullName>
    <label>Transmission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Transmission_Type</valueSetName>
    </valueSet>
</CustomField>