Dream Cars/force-app/main/default/objects/Product2/recordTypes/For_Rent.recordType-meta.xml
<RecordType>
    <fullName>For_Rent</fullName>
    <active>true</active>
    <label>For Rent</label>
</RecordType>