Dream Cars/force-app/main/default/objects/Product2/validationRules/Restrict_Sold_Car_Editing.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Sold_Car_Editing</fullName>
    <active>true</active>
    <description>Ensure that only the Sales Manager (and SysAdmin) can edit records of sold cars.</description>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp;
RecordType.DeveloperName = &quot;For_Sale&quot; &amp;&amp;
$Profile.Name &lt;&gt; &quot;Sales Manager&quot; &amp;&amp;
$Profile.Name &lt;&gt; &quot;System Administrator&quot;</errorConditionFormula>
    <errorMessage>Only Sales Managers are allowed to edit records of sold cars.</errorMessage>
</ValidationRule>